--- a/templates/generator.rb.tt
+++ b/templates/generator.rb.tt
@@ -33,7 +33,7 @@ Stackr::Template.new.tap do |t|
     # Add in the environment map in includes/environment_map.rb
     # You can edit the map to include environment specific things
     # like Vpc, Subnets, Security Groups, etc.
-    mapping 'EnvironmentMap', File.join(includes_path, 'environment_map.rb')
+    mapping 'EnvironmentMap', File.join(t.includes_path, 'environment_map.rb')
 
     # Add resources here.
 
